testsuite/tests/typecheck/should_fail/T8806.stderr

T8806.hs:5:6: error:
    • Expected a constraint, but ‘Int’ has kind ‘*’
    • In the type signature: f :: Int => Int

T8806.hs:8:7: error:
    • Expected a constraint, but ‘Int’ has kind ‘*’
    • In the type signature: g :: (Int => Show a) => Int
